@@ -2,3 +2,4 @@ data_root	"/home/martin/Documents/Scannomatic"
 log_path	"/config/logs"
 log_level	11
 GUI_title	"APPLICATION SETTINGS"
+number_of_scanners	3
